--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="mocha"></div>
     <script src="mocha.js"></script>
+    <script src="node_modules/expect/umd/expect.min.js"></script>
     <script>mocha.setup('bdd');</script>
     <script src="tests.js"></script>
     <script>
