--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="mocha"></div>
     <script src="mocha.js"></script>
     <script src="node_modules/expect/umd/expect.min.js"></script>
-    <script>mocha.setup('bdd');</script>
+    <script>mocha.setup('qunit');</script>
     <script src="tests.js"></script>
     <script>
       mocha.run();
