--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script src="mocha.js"></script>
     <script src="node_modules/expect/umd/expect.min.js"></script>
     <script>mocha.setup('qunit');</script>
-    <script src="tests.js"></script>
+    <script src="operation.js"></script>
+    <script src="callback.examples.js"></script>
     <script>
       mocha.run();
     </script>
