Put together some examples of mocha to explain what to be careful of when testing async code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script>mocha.setup('qunit');</script>
     <script src="operation.js"></script>
     <script src="callback.examples.js"></script>
+    <script src="mocha.examples.js"></script>
     <script>
       mocha.run();
     </script>
