--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script src="mocha.js"></script>
     <script src="node_modules/expect/umd/expect.min.js"></script>
     <script>mocha.setup('qunit');</script>
-    <script src="operation.js"></script>
-    <script src="callback.examples.js"></script>
-    <script src="mocha.examples.js"></script>
+    <script src="src/operation.js"></script>
+    <script src="src/callback.examples.js"></script>
+    <script src="src/mocha.examples.js"></script>
     <script>
       mocha.run();
     </script>
