Setup of hint for challenge to implement registering multiple callbacks to be able to decouple our app and have multiple components register to the same operation's completion.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="mocha.js"></script>
     <script src="node_modules/expect/umd/expect.min.js"></script>
     <script>mocha.setup('qunit');</script>
+    <script src="multiDone.js"></script>
     <script src="src/operation.js"></script>
     <script src="src/callback.examples.js"></script>
     <script>
